// Copyright 2022 Dennis Hezel
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// rpc ServerStreaming(Request) returns (stream Response) {}
// rpc ClientStreaming(stream Request) returns (Response) {}
// rpc BidirectionalStreaming(stream Request) returns (stream Response) {}


/* [example-proto] */
syntax = "proto3";

package eureka;


service LiveSlamControlCenter
{
  rpc DoForceUpdate(DoForceUpdateMsg) returns (GenericResultMsg) {}

  rpc StartPoseGraphStreaming(StartPoseGraphUpdatesMsg) returns (stream PoseGraphVisualizationUpdateMsg) {}
}


message GenericResultMsg
{
  int32 integer = 1;
}

//
// Client (UI) Requests From Server (SLAM)
//
message DoForceUpdateMsg
{
  int32 integer = 1;
}

//
// Streaming From Server To Client
//

message StartPoseGraphUpdatesMsg
{
  int32 integer = 1;
}

message PoseGraphVisualizationUpdateMsg  
{
    // 7 elements per pose: (id, tx,ty,tz, rx,ry,rz)
    // (id) is an integer id
    // (tx ty tz) are locations in cm
    // (rx ry rz) are unit vector elements, representing body orientation

    repeated float poses = 1;
    repeated uint32 edges_meta = 2; // ref_id, tgt_id, type, is_inlier - 4 fields
    repeated float edges_data = 3; // ref_txtytz, tgt_txtytz (induced), tgt_rxryrz (induced), tgt_txtytz (optimized) - 12 fields
}


